🎀 Make sure submission state does not wrap

--- a/src/pretalx/static/common/scss/_pretalx.scss
+++ b/src/pretalx/static/common/scss/_pretalx.scss
@@ -127,3 +127,6 @@ pre {
   border: 1px solid $gray-light;
   border-radius: 3px;
 }
+.state-fragment {
+  white-space: nowrap;
+}
